--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <html>
     <head>
-      <meta charset="utf-8">
-      <title>React Chat App</title>
-      <link rel="stylesheet" href="/dist/assets/style.css">
+      <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+      <meta viewport: 'width=device-width, initial-scale=1, shrink-to-fit=no'/>
+      <title><%= htmlWebpackPlugin.options.title %></title>
+      <link rel="stylesheet" href="/style.css">
       <link rel="icon" href="/dist/favicon.ico" type="image/ico" />
+      <!--link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"-->
       <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"--> 
       <script src="/socket.io/socket.io.js"></script>
       
@@ -21,3 +23,5 @@
     </body>
     <script src="/dist/assets/bundle.js"></script>
   </html>
+
+  
